--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@tinacms/starter",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "tinacms dev -c \"next dev\"",
     "build": "tinacms build && next build",
