--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "set.prototype.symmetricdifference": "^1.1.3",
     "styled-jsx": "^5.1.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.2.4",
