--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.1.5",
     "@tailwindcss/typography": "^0.5.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.1",
