--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.1",
     "date-fns": "^3.6.0",
+    "install": "^0.13.0",
+    "method-override": "^3.0.0",
     "next": "^14.2.4",
     "next-themes": "^0.3.0",
+    "npm": "^10.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
