--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next": "^14.2.4",
     "next-themes": "^0.3.0",
     "npm": "^10.8.2",
+    "power-set": "^1.1.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
