Better Eslint and fixing broken lint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,12 @@
 {
     "extends": [
+        "next/core-web-vitals",
         "eslint:recommended",
-        "next"
-    ]
+        "next",
+        "prettier"
+    ],
+    "rules": {
+        "@next/next/no-img-element": "off",
+        "react-hooks/exhaustive-deps": "off"
+    }
 }
