--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.3.11",
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^12.1.5"
