Init commit of lambdas

--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,12 @@
 .env.production
 .idea
 
+sendgrid.env
+
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 .tina/__generated__
+sendgrid.env
