--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.8",
     "class-variance-authority": "^0.7.0",
@@ -45,6 +47,7 @@
     "react-icons": "^5.2.1",
     "set.prototype.difference": "^1.1.5",
     "set.prototype.symmetricdifference": "^1.1.3",
+    "stripe": "^16.4.0",
     "styled-jsx": "^5.1.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.2.4",
