github cloudformation template

--- a/.aws/gtihub_actions_cloudformation_template.yml
+++ b/.aws/gtihub_actions_cloudformation_template.yml
@@ -14,6 +14,8 @@ Resources:
   Role:
     Type: AWS::IAM::Role
     Properties:
+      ManagedPolicyArns:
+        - arn:aws:iam::645491919786:policy/github-deploy-lambdas
       AssumeRolePolicyDocument:
         Statement:
           - Effect: Allow
