--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,5 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 ## Not used in prod ##
 
 # Internally used to show debug in localhost
-INTERNAL_DEBUG=false
+NEXT_PUBLIC_INTERNAL_DEBUG=false
 NEXT_PUBLIC_VERCEL_PROJECT_PRODUCTION_URL=
