--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "npm": "^10.8.2",
     "power-set": "^1.1.8",
     "react": "^18.3.1",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "set.prototype.difference": "^1.1.5",
