--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.1",
     "date-fns": "^3.6.0",
+    "instagram-private-api": "^1.46.1",
     "install": "^0.13.0",
     "method-override": "^3.0.0",
     "next": "^14.2.4",
@@ -46,6 +47,8 @@
     "react-countdown": "^2.3.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-instagram-embed": "^3.0.0",
+    "react-social-media-embed": "^2.5.13",
     "set.prototype.difference": "^1.1.5",
     "set.prototype.symmetricdifference": "^1.1.3",
     "stripe": "^16.4.0",
