--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@material-tailwind/react": "^2.1.9",
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.1.0",
     "@tailwindcss/forms": "^0.5.7",
@@ -36,7 +37,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.1",
     "date-fns": "^3.6.0",
-    "instagram-private-api": "^1.46.1",
     "install": "^0.13.0",
     "method-override": "^3.0.0",
     "next": "^14.2.4",
@@ -47,12 +47,11 @@
     "react-countdown": "^2.3.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-instagram-embed": "^3.0.0",
-    "react-social-media-embed": "^2.5.13",
     "set.prototype.difference": "^1.1.5",
     "set.prototype.symmetricdifference": "^1.1.3",
     "stripe": "^16.4.0",
     "styled-jsx": "^5.1.1",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.2.4",
     "tinacms": "^2.1.0",
