--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@material-tailwind/react": "^2.1.9",
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.1.0",
     "@tailwindcss/forms": "^0.5.7",
@@ -50,13 +51,13 @@
     "set.prototype.symmetricdifference": "^1.1.3",
     "stripe": "^16.4.0",
     "styled-jsx": "^5.1.1",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.2.4",
     "tinacms": "^2.1.0",
     "typescript": "^5.5.3"
   },
   "resolutions": {
-    "_#IMPORTANT": "The below resolutions are required due to tinacms being on react 17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
