add send_email func  & rename functions

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,14 @@ sendgrid.env
 sendgrid.env
 sendgrid.env
 sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
