--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.tina/__generated__
+.tina/__generated__sendgrid.env
+sendgrid.env
 sendgrid.env
 sendgrid.env
 sendgrid.env
