--- a/.github/workflows/dev-lambdas.yml
+++ b/.github/workflows/dev-lambdas.yml
@@ -23,12 +23,12 @@ jobs:
           aws-region: eu-west-2
           role-to-assume: arn:aws:iam::645491919786:role/github-aws-credentials-mlf24-Role-s5Siu9i8MPJB 
 
-      - name: Download hash file
-        uses: actions/download-artifact@v4
-        with:
-          name: dev-hashfile
-          path: .github/workflows/
-          if-no-files-found: warn
+      # - name: Download hash file
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: dev-hashfile
+      #     path: .github/workflows/
+      #     if-no-files-found: warn
 
       - name: Initialize hash file if it doesn't exist
         run: touch .github/workflows/dev-hashfile.txt
