New Admin Stuff and Deployment Changes (#38)
* Sortable ticket list
* Stat Block Formatting
* Hideable Stat block
* Filterable table
* Label Formatting
* Adding a popup actions menu
* Stop overflow on mobile
* Talking direct to API
* Should deploy but not pricing anymore
* Ignore pricing mark 2
* trying a different name
* Also ignore dev pricing updates
* Ignore .vercel

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@
 .env.production
 .idea
 
+.vercel
+
 sendgrid.env
 
 # debug
@@ -28,12 +30,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.tina/__generated__sendgrid.env
+.tina/__generated__
 sendgrid.env
-sendgrid.env
-sendgrid.env
-sendgrid.env
-sendgrid.env
-sendgrid.env
-sendgrid.env
-sendgrid.env
+
