--- a/.github/workflows/dev-lambdas.yml
+++ b/.github/workflows/dev-lambdas.yml
@@ -3,7 +3,7 @@ name: Deploy Python Lambdas to Dev Namespace
 on:
   push:
     branches:
-      - feature/develop
+      - develop
     paths:
       - '**.py' # Change to the file extension of the language that you are using.
       - '.github/workflows/dev-lambdas.yml'
