--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.1",
     "date-fns": "^3.6.0",
+    "formik": "^2.4.6",
     "install": "^0.13.0",
     "method-override": "^3.0.0",
     "next": "^14.2.4",
@@ -56,7 +57,8 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.2.4",
     "tinacms": "^2.1.0",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "yup": "^1.4.0"
   },
   "resolutions": {
     "react": "^18.3.1",
