--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,7 @@
 {
+    "plugins": [
+        "@typescript-eslint"
+    ],
     "extends": [
         "next/core-web-vitals",
         "eslint:recommended",
@@ -6,6 +9,16 @@
         "prettier"
     ],
     "rules": {
+        "no-unused-vars":"off",
+        "@typescript-eslint/no-unused-vars": ["error", {
+            "args": "all",
+            "argsIgnorePattern": "^_",
+            "caughtErrors": "all",
+            "caughtErrorsIgnorePattern": "^_",
+            "destructuredArrayIgnorePattern": "^_",
+            "varsIgnorePattern": "^_",
+            "ignoreRestSiblings": true
+        }],
         "@next/next/no-img-element": "off",
         "react-hooks/exhaustive-deps": "off"
     }
