--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CongressSystem",
+  "name": "congress-system",
   "version": "0.3.1",
   "private": true,
   "license": "Contact Adam & Connor for details",
@@ -18,6 +18,7 @@
     "@types/node": "^20.14.4",
     "@types/react": "^18.3.3",
     "@types/styled-components": "^5.1.15",
+    "@typescript-eslint/eslint-plugin": "^8.0.1",
     "autoprefixer": "^10.4.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
