--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,8 @@ NEXT_PUBLIC_VERCEL_PROJECT_PRODUCTION_URL=
 # CLERK
 CLERK_SECRET_KEY=
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=
 
 # Lambda URLS
 LAMBDA_GETATTENDEES=
