Better env example

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,35 @@
 # These are retrieved from your project at app.tina.io
-NEXT_PUBLIC_TINA_CLIENT_ID=
-TINA_TOKEN=
-# This is set by default CI with Netlify/Vercel/Github, but can be overriden
-NEXT_PUBLIC_TINA_BRANCH=main
-# To see the preview functionality
-VERCEL_ENV=preview
-# Stripe keys, use test
-STRIPE_SECRET_KEY=
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+NEXT_PUBLIC_TINA_CLIENT_ID=<From Tina.io>
+TINA_TOKEN=<From Tina.io>
 
-## Not used in prod ##
+# Debug and information
+NEXT_PUBLIC_INTERNAL_DEBUG=<true|false> # Show debug on pages
+NEXT_PUBLIC_TINA_BRANCH=<develop|main|branch> # This is set by default CI with Netlify/Vercel/Github, but can be overriden
+VERCEL_ENV=preview # To see the preview functionality
 
-# Internally used to show debug in localhost
-NEXT_PUBLIC_INTERNAL_DEBUG=false
-NEXT_PUBLIC_VERCEL_PROJECT_PRODUCTION_URL=
+# Stripe
+STRIPE_SECRET_KEY=<From Stripe>
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=<From Stripe>
 
-# CLERK
-CLERK_SECRET_KEY=
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
-NEXT_PUBLIC_CLERK_SIGN_UP_URL=
-NEXT_PUBLIC_CLERK_SIGN_IN_URL=
+# Instgram
+IG_TOKEN=<From Instagram>
+INSTAGRAM_APP_ID=<From Instagram>
+INSTAGRAM_APP_SECRET=<From Instagram>
 
-# Lambda URLS
-LAMBDA_GETATTENDEES=
-LAMBDA_PREFERENCES=
-LAMBDA_TRANSFER_OWNER=
-LAMBDA_SEND_TICKET_EMAIL=
+# Login related
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=<From Cleark.io>
+CLERK_SECRET_KEY=<From Cleark.io>
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/auth/sign-up
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/auth/sign-in
 
-# Instagram Token
-IG_TOKEN= 
+# URLS for server actions
+LAMBDA_GETATTENDEES=<From AWS>
+LAMBDA_PREFERENCES=<From AWS>
+LAMBDA_SEND_TICKET_EMAIL=<From AWS>
+LAMBDA_TRANSFER_OWNER=<From AWS>
+
+#IZETTLE
+IZETTLE_CLIENT_ID=<From iZettle>
+IZETTLE_API_KEY=<From iZettle>
+IZETTLE_ACCESS_TOKEN=<From iZettle>
+IZETTLE_UID=<From iZettle API call>
