--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "set.prototype.difference": "^1.1.5",
+    "set.prototype.issubsetof": "^1.1.4",
     "set.prototype.symmetricdifference": "^1.1.3",
     "stripe": "^16.4.0",
     "styled-jsx": "^5.1.1",
