--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev:build": "next build"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.5",
     "@svgr/webpack": "^8.1.0",
     "@tinacms/cli": "^1.5.52",
     "@types/js-cookie": "^3.0.0",
@@ -31,7 +32,6 @@
     "@clerk/nextjs": "^5.2.8",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
-    "@material-tailwind/react": "^2.1.9",
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.1.0",
     "@tailwindcss/forms": "^0.5.7",
@@ -50,6 +50,7 @@
     "react-countdown": "^2.3.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-multi-carousel": "^2.8.5",
     "set.prototype.difference": "^1.1.5",
     "set.prototype.issubsetof": "^1.1.4",
     "set.prototype.symmetricdifference": "^1.1.3",
