--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next-themes": "^0.3.0",
     "npm": "^10.8.2",
     "power-set": "^1.1.8",
+    "qr-scanner": "^1.4.2",
     "react": "^18.3.1",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.3.1",
