Deployment triggers a test Run
Run playwright test when pushed to main master or this branch

Doing this on vercel deployment so we have a webserver to test against

Not using CI

Using base URL for tests

passing a bypass protection to vercel

if no URL try localhost

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,24 +1,27 @@
 name: Playwright Tests
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+  deployment_status:
+env:
+  VERCEL_AUTOMATION_BYPASS_SECRET: ${{ secrets.VERCEL_AUTOMATION_BYPASS_SECRET }}
+  PLAYWRIGHT_TEST_BASE_URL: ${{ github.event.deployment_status.target_url }}
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    if: github.event.deployment_status.state == 'success'
     steps:
+    - name: Url of the deployment
+      run: echo $PLAYWRIGHT_TEST_BASE_URL
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
     - name: Install dependencies
       run: npm install -g yarn && yarn
-    - name: Install Playwright Browsers
-      run: yarn playwright install --with-deps
+    - name: Install Playwright
+      run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: yarn playwright test
+      run: npx playwright test
     - uses: actions/upload-artifact@v4
       if: always()
       with:
