--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+#Playwright Tests
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+
 .tina/__generated__
 sendgrid.env
-
