Playwright tests now save screenshots

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,3 +28,10 @@ jobs:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
+    - uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: test-screnshots
+        path: test-screnshots/
+        retention-days: 10
+  
