Github action typo

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,7 +31,7 @@ jobs:
     - uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: test-screnshots
-        path: test-screnshots/
+        name: test-screenshots
+        path: test-screenshots/
         retention-days: 10
   
