--- a/functions/serverless.yml
+++ b/functions/serverless.yml
@@ -3,6 +3,15 @@ app: dance-engine # Need to see what connor thinks of name
 service: api # Do we need multiple services? 
 frameworkVersion: '4.1'
 
+plugins:
+  - serverless-prune-plugin
+
+custom:
+  prune:
+    automatic: true
+    includeLayers: true
+    number: 10
+
 package:
   individually: true
 
