--- a/functions/serverless.yml
+++ b/functions/serverless.yml
@@ -101,6 +101,7 @@ resources:
 functions:
   scanTicket:
     handler: scan_ticket/lambda_function.lambda_handler
+    name: "${sls:stage}-scan_ticket"
     package:
       patterns:
         - '!**/**'
@@ -118,10 +119,13 @@ functions:
           method: post
   customerPreferences:
     handler: customer_preferences/lambda_function.lambda_handler
+    name: "${sls:stage}-customer_preferences"
     package:
       patterns:
         - '!**/**'
         - "customer_preferences/**"
+    environment:
+      ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
     layers:
       - !Ref DynamodbLambdaLayer
     events:
@@ -133,10 +137,13 @@ functions:
           method: post
   transferOwner:
     handler: transfer_owner/lambda_function.lambda_handler
+    name: "${sls:stage}-transfer_owner"
     package:
       patterns:
         - '!**/**'
         - "transfer_owner/**"
+    environment:
+      ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
     layers:
       - !Ref DynamodbLambdaLayer
     events:
@@ -145,6 +152,7 @@ functions:
           method: post
   cardPayment:
     handler: card_payment/lambda_function.lambda_handler
+    name: "${sls:stage}-card_payment"
     package:
       patterns:
         - '!**/**'
@@ -157,9 +165,12 @@ functions:
           method: post
   createTicket:
     handler: create_ticket/lambda_function.lambda_handler
+    name: "${sls:stage}-create_ticket"
     package:
       patterns:
         - '!**/**'
         - "create_ticket/**"
+    environment:
+      ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
     layers:
       - !Ref DynamodbLambdaLayer
