--- a/functions/serverless.yml
+++ b/functions/serverless.yml
@@ -21,6 +21,11 @@ stages:
     params:
       attendeesTableName: "${sls:stage}-mlf-attendees"
       stripeProductsTableName: "${sls:stage}-mlf-stripe-products"
+      isProd: false
+  prod:
+    params:
+      isProd: true
+    
 
 provider:
   name: aws
@@ -60,7 +65,7 @@ resources:
       Type: AWS::DynamoDB::Table
       DeletionPolicy: Retain
       Properties:
-        DeletionProtectionEnabled: true
+        DeletionProtectionEnabled: ${param:isProd}
         AttributeDefinitions:
           - AttributeName: email 
             AttributeType: S
@@ -84,7 +89,7 @@ resources:
       Type: AWS::DynamoDB::Table
       DeletionPolicy: Retain
       Properties:
-        DeletionProtectionEnabled: true
+        DeletionProtectionEnabled: ${param:isProd}
         AttributeDefinitions:
           - AttributeName: prod_id 
             AttributeType: S
@@ -99,7 +104,98 @@ resources:
         TableName: ${param:stripeProductsTableName}
 
 functions:
-  scanTicket:
+
+  CardPayment:
+    handler: card_payment/lambda_function.lambda_handler
+    name: "${sls:stage}-card_payment"
+    package:
+      patterns:
+        - '!**/**'
+        - "card_payment/**"
+    environment:
+      PRODUCTS_TABLE_NAME: ${param:stripeProductsTableName}
+    layers:
+      - !Ref DynamodbLambdaLayer
+    events:
+      - httpApi:
+          path: /card_payment
+          method: post
+    
+
+  CheckoutComplete:
+    handler: checkout_complete/lambda_function.lambda_handler
+    name: "${sls:stage}-checkout_complete"
+    package:
+      patterns:
+        - '!**/**'
+        - "checkout_complete/**"
+    environment:
+      ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
+    layers:
+      - !Ref DynamodbLambdaLayer
+    events:
+      - httpApi:
+          path: /checkout_complete
+          method: post 
+
+  CreateTicket:
+    handler: create_ticket/lambda_function.lambda_handler
+    name: "${sls:stage}-create_ticket"
+    package:
+      patterns:
+        - '!**/**'
+        - "create_ticket/**"
+    environment:
+      ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
+    layers:
+      - !Ref DynamodbLambdaLayer
+
+  CustomerPreferences:
+    handler: customer_preferences/lambda_function.lambda_handler
+    name: "${sls:stage}-customer-preferences"
+    package:
+      patterns:
+        - '!**/**'
+        - "customer_preferences/**"
+    environment:
+      ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
+    layers:
+      - !Ref DynamodbLambdaLayer
+    events:
+      - httpApi:
+          path: /customer_preferences
+          method: get
+      - httpApi:
+          path: /customer_preferences
+          method: post
+
+  GeneratePricingUpdate:
+    handler: gen_price_update/lambda_function.lambda_handler
+    name: "${sls:stage}-gen_price_update"
+    package:
+      patterns:
+        - '!**/**'
+        - "gen_price_update/**"
+    environment:
+      PRODUCTS_TABLE_NAME: ${param:stripeProductsTableName}
+
+  GetAttendees:
+    handler: get_attendees/lambda_function.lambda_handler
+    name: "${sls:stage}-get_attendees"
+    package:
+      patterns:
+        - '!**/**'
+        - "get_attendees/**"
+    environment:
+      ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
+    layers:
+      - !Ref DynamodbLambdaLayer
+    events:
+      - httpApi:
+          path: /get_attendees
+          method: get
+
+  ScanTicket:
     handler: scan_ticket/lambda_function.lambda_handler
     name: "${sls:stage}-scan_ticket"
     package:
@@ -117,25 +213,49 @@ functions:
       - httpApi:
           path: /scan_ticket
           method: post
-  customerPreferences:
-    handler: customer_preferences/lambda_function.lambda_handler
-    name: "${sls:stage}-customer_preferences"
+
+  SendEmail:
+    handler: send_email/lambda_function.lambda_handler
+    name: "${sls:stage}-send_email"
     package:
       patterns:
         - '!**/**'
-        - "customer_preferences/**"
+        - "send_email/**"
+
+  SendTicket:
+    handler: send_ticket/lambda_function.lambda_handler
+    name: "${sls:stage}-send_ticket"
+    package:
+      patterns:
+        - '!**/**'
+        - "send_ticket/**"
     environment:
       ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
     layers:
       - !Ref DynamodbLambdaLayer
     events:
       - httpApi:
-          path: /customer_preferences
-          method: get
+          path: /send_ticket
+          method: post 
+
+  StripePriceUpdate:
+    handler: stripe_price_update/lambda_function.lambda_handler
+    name: "${sls:stage}-stripe_price_update"
+    package:
+      patterns:
+        - '!**/**'
+        - "stripe_price_update/**"
+    environment:
+      ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
+      PRODUCTS_TABLE_NAME: ${param:stripeProductsTableName}
+    layers:
+      - !Ref DynamodbLambdaLayer
+    events:
       - httpApi:
-          path: /customer_preferences
-          method: post
-  transferOwner:
+          path: /stripe_price_update
+          method: post 
+
+  TransferOwner:
     handler: transfer_owner/lambda_function.lambda_handler
     name: "${sls:stage}-transfer_owner"
     package:
@@ -150,27 +270,10 @@ functions:
       - httpApi:
           path: /transfer_owner
           method: post
-  cardPayment:
-    handler: card_payment/lambda_function.lambda_handler
-    name: "${sls:stage}-card_payment"
-    package:
-      patterns:
-        - '!**/**'
-        - "card_payment/**"
-    layers:
-      - !Ref DynamodbLambdaLayer
-    events:
-      - httpApi:
-          path: /card_payment
-          method: post
-  createTicket:
-    handler: create_ticket/lambda_function.lambda_handler
-    name: "${sls:stage}-create_ticket"
-    package:
-      patterns:
-        - '!**/**'
-        - "create_ticket/**"
-    environment:
-      ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
-    layers:
-      - !Ref DynamodbLambdaLayer
+
+
+
+
+
+
+
