Using yarn for CI

--- a/.github/workflows/api-deployment.yml
+++ b/.github/workflows/api-deployment.yml
@@ -1,4 +1,4 @@
-name: Deploy master branch
+name: Deploy preview branch
 
 on:
   push:
@@ -19,7 +19,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
+    - run: rm -rf node_modules && yarn install --frozen-lockfile
     - name: Install Plugin & Deploy
       uses: serverless/github-action@v3.2
       with:
