--- a/functions/serverless.yml
+++ b/functions/serverless.yml
@@ -29,7 +29,7 @@ stages:
 
 provider:
   name: aws
-  runtime: python3.11
+  runtime: nodejs.18.x
   memorySize: 128
   region: eu-west-1
   iam:
@@ -181,6 +181,7 @@ functions:
           method: post
 
   GeneratePricingUpdate:
+    runtime: python3.11
     handler: gen_price_update/lambda_function.lambda_handler
     name: "${sls:stage}-gen_price_update"
     package:
@@ -195,6 +196,7 @@ functions:
       - !Ref StripeLambdaLayer
 
   GetAttendees:
+    runtime: python3.11
     handler: get_attendees/lambda_function.lambda_handler
     name: "${sls:stage}-get_attendees"
     package:
@@ -212,6 +214,7 @@ functions:
           method: get
 
   ScanTicket:
+    runtime: python3.11
     handler: scan_ticket/lambda_function.lambda_handler
     name: "${sls:stage}-scan_ticket"
     package:
@@ -232,6 +235,7 @@ functions:
           method: post
 
   SendEmail:
+    runtime: python3.11
     handler: send_email/lambda_function.lambda_handler
     name: "${sls:stage}-send_email"
     package:
@@ -242,6 +246,7 @@ functions:
       SENDGRID_API_KEY: ${param:sendgridApiKey}
 
   SendTicket:
+    runtime: python3.11
     handler: send_ticket/lambda_function.lambda_handler
     name: "${sls:stage}-send_ticket"
     package:
@@ -260,6 +265,7 @@ functions:
           method: post 
 
   StripePriceUpdate:
+    runtime: python3.11
     handler: stripe_price_update/lambda_function.lambda_handler
     name: "${sls:stage}-stripe_price_update"
     package:
@@ -278,6 +284,7 @@ functions:
           method: post 
 
   TransferOwner:
+    runtime: python3.11
     handler: transfer_owner/lambda_function.lambda_handler
     name: "${sls:stage}-transfer_owner"
     package:
