Be more verbose

--- a/.github/workflows/api-deployment.yml
+++ b/.github/workflows/api-deployment.yml
@@ -21,10 +21,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: rm -rf node_modules && yarn install --frozen-lockfile
     - name: Install Plugin & Deploy
-      uses: serverless/github-action@v3.2
+      uses: serverless/github-action@v3.2.0
       with:
-        args: -c ""cd ./functions && serverless plugin install --name serverless-prune-plugin && serverless deploy"
+        args: -c ""cd ./functions && serverless plugin install --name serverless-prune-plugin && serverless deploy --verbose"
         entrypoint: /bin/sh
       env:
-        SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
-
+        SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}      
