--- a/.github/workflows/api-deployment.yml
+++ b/.github/workflows/api-deployment.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install Plugin & Deploy
       uses: serverless/github-action@v3.2.0
       with:
-        args: -c "cd ./functions && serverless plugin install --name serverless-prune-plugin --legacy-peer-deps && serverless deploy --verbose"
+        args: -c "cd ./functions && serverless deploy --verbose"
         entrypoint: /bin/sh
       env:
         SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}      
