--- a/.github/workflows/api-deployment.yml
+++ b/.github/workflows/api-deployment.yml
@@ -20,10 +20,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: rm -rf node_modules && yarn install --frozen-lockfile
+    - name: Add serverless
+      run: sudo yarn global add serverless
     - name: Install Plugin & Deploy
-      uses: serverless/github-action@v3.2.0
-      with:
-        args: -c "cd ./functions && serverless deploy --verbose"
-        entrypoint: /bin/sh
+      run: cd ./functions && serverless deploy --verbose"
       env:
         SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}      
