--- a/.github/workflows/api-deployment.yml
+++ b/.github/workflows/api-deployment.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Add serverless
       run: yarn global add serverless
     - name: Install Plugin & Deploy
-      run: cd ./functions && serverless deploy --verbose
+      run: cd ./functions && serverless deploy
       env:
         SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}      
