Allowing merge into main for dependabot

--- a/.github/workflows/main-pr-from-develop-only.yml
+++ b/.github/workflows/main-pr-from-develop-only.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Check branch
         run: |
-          if [[ ${GITHUB_HEAD_REF} != develop ]] && ! [[ ${GITHUB_HEAD_REF} =~ ^hotfix/ ]]; 
+          if [[ ${GITHUB_HEAD_REF} != develop ]] && ! [[ ${GITHUB_HEAD_REF} =~ ^hotfix/ ]] && ! [[ ${GITHUB_HEAD_REF} =~ ^dependabot/ ]]; 
           then
             echo "Error: Pull request must come from 'develop' or 'hotfix/' branch"
             exit 1
