--- a/functions/package.json
+++ b/functions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "api-deployment-scripts",
   "version": "0.0.1",
   "description": "API deployment",
   "main": "index.js",
